# llm-council

./: .firebaserc  .gitignore  GUI_QUICK_START.md  SESSION_SUMMARY.md  SETUP.md  SLACK_DEPLOYMENT_GUIDE.md  deploy.sh  firebase.json  firestore.rules  gui_setup.py  launch_gui.bat  launch_gui.sh  pyproject.toml  setup.sh
.github/agents/: frontend.agent.md
.idx/: dev.nix
backend/: config.py  council.py  main.py  openrouter.py  slack_config.py  slack_formatter.py  slack_handler.py  storage_firestore.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  api.js  firebase.js  main.jsx
frontend/src/components/: AuthWrapper.css  AuthWrapper.jsx
functions/: auth.py  config.py  council.py  main.py  openrouter.py  requirements.txt
